<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_nav_graph"
    app:startDestination="@id/frgSearch">

    <fragment
        android:name="ir.reza_mahmoudi.githubusers.feature_user_details.presentation.UserDetailsFragment"
        android:id="@+id/frgUserDetails">
        <argument
            android:name="username"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/frgSearch"
        android:name="ir.reza_mahmoudi.githubusers.feature_search.presentation.SearchFragment">
        <action
            android:id="@+id/action_frgSearch_to_frgUserDetails"
            app:destination="@id/frgUserDetails">
            <argument
                android:name="username"
                app:argType="string"
                app:nullable="true" />
        </action>
    </fragment>
</navigation>